[package]
name = "payments-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
csv = "1.3.1"
fxhash = "0.2.1"
rust_decimal = "1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
itertools = "0.14.0"
rust_decimal_macros = "1.36.0"
serde_json = "1.0.137"
