[package]
name = "payments-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
csv = "1.3.1"
csv-async = "1.3.0"
dashmap = "6.1.0"
futures = "0.3.31"
itertools = "0.14.0"
rust_decimal = "1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
rust_decimal_macros = "1.36.0"
serde_json = "1.0.137"
